<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_font_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc214.assignment04.FontEditActivity">

    <!-- Wrap the linear layout in a scroll view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--
            Linear Layout for the Font Style Properties subcategory
            -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionFontStyleProperties"
                    style="?android:attr/listSeparatorTextViewStyle" />
                <CheckBox
                    android:id="@+id/boldToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boldToggleText"/>
                <CheckBox
                    android:id="@+id/italicToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italicToggleText"/>
                <CheckBox
                    android:id="@+id/underlineToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/underlineToggleText"/>
            </LinearLayout>

            <!--
            Linear Layout for the Font Color subcategory
            -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionFontColor"
                    style="?android:attr/listSeparatorTextViewStyle" />
                <Spinner
                    android:id="@+id/textColorSelection"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <!--
            Linear Layout for the Font Size subcategory
            -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionFontSize"
                    style="?android:attr/listSeparatorTextViewStyle" />
                <SeekBar
                    android:id="@+id/textSizeSelection"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <!--
            Linear Layout for the Save/cancel buttons
            -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/cancel"/>

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/ok"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
